fix: make mastodon link invisible

--- a/nav.css
+++ b/nav.css
@@ -47,3 +47,9 @@
   color: var(--ctp-mocha-text);
   text-align: center;
 }
+
+.invisible {
+  display: none;
+  width: 0px;
+  height: 0px;
+}
